# Iterator

./: CMakeLists.txt  InterfazColeccion.h  InterfazIterator.h  ListIterator.cpp  ListIterator.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h  Vector.cpp  Vector.h  VectorIterador.cpp  VectorIterador.h  main.cpp
